force-app/main/default/objects/Outcome__c/Outcome__c.object-meta.xml
<CustomObject>
    <description>Metrics by which the success of a project is judged</description>
    <label>Outcome</label>
    <nameField>
        <label>Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>