force-app/main/default/objects/Outcome__c/fields/Key_Change__c.field-meta.xml
<CustomField>
    <fullName>Key_Change__c</fullName>
    <label>Key Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>