force-app/main/default/objects/Outcome__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <inlineHelpText>How will the outcome be measured?</inlineHelpText>
    <label>Measure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>