force-app/main/default/objects/Outcome__c/fields/Outcome_summary__c.field-meta.xml
<CustomField>
    <fullName>Outcome_summary__c</fullName>
    <inlineHelpText>Please provide a summary of what the outcome is and how it will affect the service users</inlineHelpText>
    <label>Outcome summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>